--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@
             </div>
         </div>
 
-        <!-- SLIDE 5: RECOMMENDATION -->
+        <!-- SLIDE 5: RECOMMENDATION
         <div class="slide" id="slide-5">
             <div style="width: 100%; max-width: 900px;">
                 <div class="sub-heading">Saran Strategis</div>
@@ -419,7 +419,7 @@
                 <div class="grid-2">
                     <div class="card" style="border-top: 4px solid var(--accent-gold);">
                         <h3>1. Untuk Pembayaran</h3>
-                        <p style="font-weight: bold; font-size: 1.1rem; margin-bottom: 10px;">Tetap di MIDTRANS</p>
+                        <p style="font-weight: bold; font-size: 1.1rem; margin-bottom: 10px;">MIDTRANS</p>
                         <p style="font-size: 0.9rem; color: #555;">
                             Integrasi sudah berjalan lancar. Konversi penjualan akan naik drastis karena pembeli
                             dimudahkan (bisa QRIS/VA). Tidak perlu konfirmasi manual yang melelahkan admin.
@@ -437,7 +437,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
 
         <!-- SLIDE 6: NEXT STEPS -->
         <div class="slide" id="slide-6">
@@ -452,7 +452,7 @@
                         1</div>
                     <div>
                         <strong>Konfirmasi Pilihan</strong><br>
-                        <span style="font-size: 0.9rem; color: #666;">Menyetujui penggunaan Midtrans & RajaOngkir untuk
+                        <span style="font-size: 0.9rem; color: #666;">Pilihan penggunaan Midtrans & RajaOngkir untuk
                             fase Launching.</span>
                     </div>
                 </div>
