--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@
             </div>
         </div>
 
-        <!-- SLIDE 5: RECOMMENDATION
+        SLIDE 5: RECOMMENDATION
         <div class="slide" id="slide-5">
             <div style="width: 100%; max-width: 900px;">
                 <div class="sub-heading">Saran Strategis</div>
@@ -421,8 +421,9 @@
                         <h3>1. Untuk Pembayaran</h3>
                         <p style="font-weight: bold; font-size: 1.1rem; margin-bottom: 10px;">MIDTRANS</p>
                         <p style="font-size: 0.9rem; color: #555;">
-                            Integrasi sudah berjalan lancar. Konversi penjualan akan naik drastis karena pembeli
-                            dimudahkan (bisa QRIS/VA). Tidak perlu konfirmasi manual yang melelahkan admin.
+                            Integrasi sudah berjalan. Jika pertimbanganya keamanan maka Midtrans bisa diandalkan dengan
+                            beragam pilihan metode pembayaran seperti
+                            QRIS/VA dll.
                         </p>
                     </div>
                     <div class="card" style="border-top: 4px solid var(--primary-sage);">
@@ -437,7 +438,7 @@
                     </div>
                 </div>
             </div>
-        </div> -->
+        </div>
 
         <!-- SLIDE 6: NEXT STEPS -->
         <div class="slide" id="slide-6">
