--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@
             </div>
         </div>
 
-        SLIDE 5: RECOMMENDATION
+        <!-- SLIDE 5: RECOMMENDATION -->
         <div class="slide" id="slide-5">
             <div style="width: 100%; max-width: 900px;">
                 <div class="sub-heading">Saran Strategis</div>
